--- a/vimfiles/bundle/command-t/ruby/command-t/Makefile
+++ b/vimfiles/bundle/command-t/ruby/command-t/Makefile
@@ -7,34 +7,34 @@ srcdir = .
 topdir = /usr/lib/ruby/1.8/x86_64-linux
 hdrdir = $(topdir)
 VPATH = $(srcdir):$(topdir):$(hdrdir)
-prefix = $(DESTDIR)/usr
 exec_prefix = $(prefix)
-infodir = $(prefix)/share/info
+prefix = $(DESTDIR)/usr
+libdir = $(exec_prefix)/lib
+vendorlibdir = $(vendordir)/$(ruby_version)
+libexecdir = $(prefix)/lib/ruby1.8
+sitelibdir = $(sitedir)/$(ruby_version)
+sbindir = $(exec_prefix)/sbin
 sharedstatedir = $(prefix)/com
 includedir = $(prefix)/include
-libexecdir = $(prefix)/lib/ruby1.8
-vendordir = $(libdir)/ruby/vendor_ruby
-docdir = $(datarootdir)/doc/$(PACKAGE)
 psdir = $(docdir)
-archdir = $(rubylibdir)/$(arch)
-rubylibdir = $(libdir)/ruby/$(ruby_version)
-sitelibdir = $(sitedir)/$(ruby_version)
-mandir = $(prefix)/share/man
-datarootdir = $(prefix)/share
-sitedir = $(DESTDIR)/usr/local/lib/site_ruby
-bindir = $(exec_prefix)/bin
-vendorarchdir = $(vendorlibdir)/$(sitearch)
-libdir = $(exec_prefix)/lib
-oldincludedir = $(DESTDIR)/usr/include
-localedir = $(datarootdir)/locale
-sbindir = $(exec_prefix)/sbin
-pdfdir = $(docdir)
+infodir = $(prefix)/share/info
+docdir = $(datarootdir)/doc/$(PACKAGE)
 dvidir = $(docdir)
-sitearchdir = $(sitelibdir)/$(sitearch)
-sysconfdir = $(DESTDIR)/etc
 datadir = $(datarootdir)
+sitearchdir = $(sitelibdir)/$(sitearch)
+bindir = $(exec_prefix)/bin
+rubylibdir = $(libdir)/ruby/$(ruby_version)
+archdir = $(rubylibdir)/$(arch)
+vendorarchdir = $(vendorlibdir)/$(sitearch)
+localedir = $(datarootdir)/locale
+vendordir = $(libdir)/ruby/vendor_ruby
+mandir = $(prefix)/share/man
+sitedir = $(DESTDIR)/usr/local/lib/site_ruby
+sysconfdir = $(DESTDIR)/etc
+oldincludedir = $(DESTDIR)/usr/include
+datarootdir = $(prefix)/share
+pdfdir = $(docdir)
 htmldir = $(docdir)
-vendorlibdir = $(vendordir)/$(ruby_version)
 localstatedir = $(DESTDIR)/var
 
 CC = gcc
@@ -47,9 +47,9 @@ RUBY_EXTCONF_H =
 CFLAGS   =  -fPIC -fno-strict-aliasing -g -g -O2  -fPIC $(cflags) 
 INCFLAGS = -I. -I$(topdir) -I$(hdrdir) -I$(srcdir)
 DEFS     = 
-CPPFLAGS = -DHAVE_RUBY_H  $(DEFS) $(cppflags)
+CPPFLAGS = -DHAVE_RUBY_H -D_FORTIFY_SOURCE=2 $(DEFS) $(cppflags)
 CXXFLAGS = $(CFLAGS) 
-ldflags  = -L. -Wl,-Bsymbolic-functions -rdynamic -Wl,-export-dynamic
+ldflags  = -L. -Wl,-Bsymbolic-functions -Wl,-z,relro -rdynamic -Wl,-export-dynamic
 dldflags = 
 archflag = 
 DLDFLAGS = $(ldflags) $(dldflags) $(archflag)
